--- a/web/src/static/css/writeGrowthLog.css
+++ b/web/src/static/css/writeGrowthLog.css
@@ -9,3 +9,27 @@
     float: right;
     margin-right: 10px;
 }
+
+.contentOmitted {
+    height: 150px;
+    word-break: keep-all; /* 不换行 */
+    white-space: nowrap; /* 不换行 */
+    overflow: hidden; /* 内容超出宽度时隐藏超出部分的内容 */
+    text-overflow: ellipsis; /* 当对象内文本溢出时显示省略标记(...) ；需与overflow:hidden;一起使用。*/
+    white-space: normal;
+}
+
+.ant-card-head {
+    height: 20px;
+}
+
+.ant-list-item-meta-content {
+    width: 100%;
+    padding: 2px;
+}
+
+.ant-list-item-meta-content img{
+    width: 100%;
+    max-height: 500px;
+    padding: 20px;
+}
